--- a/miniprogram/pages/home/enterInterview/enterInterview.wxml
+++ b/miniprogram/pages/home/enterInterview/enterInterview.wxml
@@ -1,23 +1,19 @@
-
-<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
-	<view slot="content">模拟面试</view>
-	<view slot="backText"></view>
-</cu-custom>
-
-<view class="bank">
-  <text class="title">{{bank.title}}</text>
-  <text class="num">题目数量：{{bank.count}}道</text>
-</view>
-<view class="type">
-  <text>请选择录制方式</text>
-</view>
-  <view bindtap="handleAudioStartExam" class="audio">
-    <text>音频</text>
-  </view>
-  <view bindtap="handleVideoStartExam" class="video">
-    <text>视频</text>
-  </view>
-
-
-
-
+<scroll-view scroll-y>
+	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
+		<view slot="content">模拟面试</view>
+		<view slot="backText"></view>
+	</cu-custom>
+	<view class="bank">
+		<text class="title">{{bank.title}}</text>
+		<text class="num">题目数量：{{bank.count}}道</text>
+	</view>
+	<view class="type">
+		<text>请选择录制方式</text>
+	</view>
+	<view bindtap="handleAudioStartExam" class="audio">
+		<text>音频</text>
+	</view>
+	<view bindtap="handleVideoStartExam" class="video">
+		<text>视频</text>
+	</view>
+</scroll-view>
