--- a/miniprogram/pages/home/enterWritten/enterWritten.wxss
+++ b/miniprogram/pages/home/enterWritten/enterWritten.wxss
@@ -1,18 +1,5 @@
 
 .button {
-  /* width: 264rpx;
-  height: 76rpx;
-  border-radius: 20rpx;
-  background-color: rgba(250, 191, 1, 1);
-  color: rgba(16, 16, 16, 1);
-  font-size: 36rpx;
-  text-align: center;
-  box-shadow: 0rpx 4rpx 10rpx 0rpx rgba(0, 0, 0, 0.44);
-  font-family: Microsoft Yahei;
-  border: 4rpx solid rgba(0, 0, 0, 1);
-  justify-content: center;
-  line-height: 70rpx; */
-
   width: 274rpx;
   height: 100rpx;
   line-height: 96rpx;
@@ -36,6 +23,7 @@
   border: 2rpx solid rgba(255, 255, 255, 0);
   margin: 100rpx auto;
   padding: 40rpx;
+  margin-bottom: 50rpx;
 }
 .title {
   color: rgba(16, 16, 16, 1);
