--- a/miniprogram/pages/home/examWritten/examWritten.wxml
+++ b/miniprogram/pages/home/examWritten/examWritten.wxml
@@ -1,134 +1,134 @@
-<cu-custom bgColor="bg-yellow" isBack="{{!ifSubmit?true:false}}">
-	<!-- <view slot="content">{{bank.title}}</view> -->
-	<view slot="content">模拟笔试</view>
-	<view wx:if="{{!ifSubmit}}" slot="backText"></view>
-</cu-custom>
 
-<view class="bank-wrap {{ifSubmit?'hide':'show'}}">
-	<view class="bank-title">
-		<text>{{bank.title}}</text>
-	</view>
-	<view class="score-time">
-
-		<text class="time">时间：{{bank.limit_time}}分钟</text>
-	</view>
-	<view class="line">
-	</view>
-	<view class="bank" wx:for="{{bank.bank}}" wx:key="id">
-		<block wx:if="{{item.type === '单选'}}">
-			<view class="radio-question">
-				<view class="question-title">
-					<text>{{item.id}}. {{item.title}}<text class="text-yellow">【单选】</text>
-					</text>
-				</view>
-				<radio-group data-type="{{item.type}}" id="{{item.id}}" bindchange="radioChange" class="radio-group">
-					<label wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
-						<radio class=" black radio" wx:if="{{value}}" value="{{key}}">
-						</radio>
-						<text>{{value}}</text>
-					</label>
-				</radio-group>
-			</view>
-		</block>
-		<block wx:elif="{{item.type === '多选'}}">
-			<view class="checkbox-question">
-				<view class="question-title">
-					<text>{{item.id}}. {{item.title}}<text class="text-yellow">【多选】</text></text>
-				</view>
-				<checkbox-group data-type="{{item.type}}" id="{{item.id}}" bindchange="checkboxChange" class="checkbox-group">
-					<label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-						<checkbox wx:if="{{value}}" class="black" value="{{key}}">
-						</checkbox>
-						<text>{{value}}</text>
-					</label>
-				</checkbox-group>
-			</view>
-
-		</block>
-		<block wx:elif="{{item.type === '不定项选'}}">
-			<view class="checkbox-question">
-				<view class="question-title">
-					<text>{{item.id}}. {{item.title}}<text class="text-yellow">【不定项选】</text></text>
-				</view>
-				<checkbox-group bindchange="checkboxChange" data-type="{{item.type}}" id="{{item.id}}" class="checkbox-group">
-					<label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-						<checkbox wx:if="{{value}}" class="black" value="{{key}}">
-						</checkbox>
-						<text>{{value}}</text>
-					</label>
-				</checkbox-group>
-			</view>
-		</block>
-		<block wx:elif="{{item.type === '判断'}}">
-			<view class="radio-question">
-				<view class="question-title">
-					<text>{{item.id}}. {{item.title}}<text class="text-yellow">【判断】</text></text>
-				</view>
-				<radio-group class="radio-group" data-type="{{item.type}}" id="{{item.id}}" bindchange="radioChange">
-					<label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-						<radio wx:if="{{value}}" class="black radio" value="{{key}}">
-						</radio>
-						<text>{{value}}</text>
-					</label>
-				</radio-group>
-			</view>
-		</block>
-		<block wx:elif="{{item.type === '填空'}}">
-			<view class="blank-question">
-				<view class="question-title">
-					<text>{{item.id}}. {{item.title}}<text class="text-yellow">【填空】</text></text>
-				</view>
-				<view bindtap="handleTap" data-type="{{item.type}}" id="{{item.id}}" wx:for="{{item.correct_answer}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-					<input data-index="{{key}}" bindinput="inputChange" placeholder="[填空{{key + 1}}]"></input>
-				</view>
-			</view>
-		</block>
-		<block wx:elif="{{item.type === '排序'}}">
-			<view class="sort-question">
-				<view class="question-title">
-					<text>{{item.id}}. {{item.title}}<text class="text-yellow">【排序】</text></text>
-				</view>
-				<view wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
-					<block wx:if="{{value != ''}}">
-						<view style="height: 50rpx;">
-							<text>{{key}}. {{value}}</text>
-						</view>
-					</block>
-				</view>
-				<view style="margin-top: 30rpx">
-					<input data-type="{{item.type}}" data-index="{{0}}" id="{{item.id}}" bindinput="inputChange" placeholder="[填空1]"></input>
-				</view>
-			</view>
-		</block>
-		<block wx:else>
-		</block>
-	</view>
-	<view class="submit" bindtap="handleSubmit">
-		<text>提交试卷</text>
-	</view>
-	<view class="timer">
-		<text>{{time}}</text>
-	</view>
-</view>
-
-<view class="bg-sbumit {{ifSubmit?'show':'hide'}}">
-	<view class="detail">
-		<block wx:if="{{emptyQuestions.length > 0}}">
-			<text>你还有题目未完成
-      （{{emptyStr}}）
-        是否确认提交
-      </text>
-		</block>
-		<block wx:else>
-			<text>提交之后无法更改答案是否确认提交</text>
-		</block>
-	</view>
-	<view class="unfinished">
-		<view class="continute my-btn" bindtap="handleContinue">
-			<text>继续答题</text>
+<scroll-view scroll-y>
+	<cu-custom bgColor="bg-yellow" isBack="{{!ifSubmit?true:false}}">
+		<view slot="content">模拟笔试</view>
+		<view wx:if="{{!ifSubmit}}" slot="backText"></view>
+	</cu-custom>
+	<view class="bank-wrap {{ifSubmit?'hide':'show'}}">
+		<view class="bank-title">
+			<text>{{bank.title}}</text>
 		</view>
-		<view class="complete my-btn" bindtap="handleComplete">
-			<text>确定</text>
+		<view class="score-time">
+
+			<text class="time">时间：{{bank.limit_time}}分钟</text>
+		</view>
+		<view class="line">
+		</view>
+		<view class="bank" wx:for="{{bank.bank}}" wx:key="id">
+			<block wx:if="{{item.type === '单选'}}">
+				<view class="radio-question">
+					<view class="question-title">
+						<text>{{item.id}}. {{item.title}}<text class="text-yellow">【单选】</text>
+						</text>
+					</view>
+					<radio-group data-type="{{item.type}}" id="{{item.id}}" bindchange="radioChange" class="radio-group">
+						<label wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value" class="my-choosebox">
+							<radio class=" black radio" wx:if="{{value}}" value="{{key}}">
+							</radio>
+							<text>{{value}}</text>
+						</label>
+					</radio-group>
+				</view>
+			</block>
+			<block wx:elif="{{item.type === '多选'}}">
+				<view class="checkbox-question">
+					<view class="question-title">
+						<text>{{item.id}}. {{item.title}}<text class="text-yellow">【多选】</text></text>
+					</view>
+					<checkbox-group data-type="{{item.type}}" id="{{item.id}}" bindchange="checkboxChange" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox wx:if="{{value}}" class="black" value="{{key}}">
+							</checkbox>
+							<text>{{value}}</text>
+						</label>
+					</checkbox-group>
+				</view>
+
+			</block>
+			<block wx:elif="{{item.type === '不定项选'}}">
+				<view class="checkbox-question">
+					<view class="question-title">
+						<text>{{item.id}}. {{item.title}}<text class="text-yellow">【不定项选】</text></text>
+					</view>
+					<checkbox-group bindchange="checkboxChange" data-type="{{item.type}}" id="{{item.id}}" class="checkbox-group">
+						<label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<checkbox wx:if="{{value}}" class="black" value="{{key}}">
+							</checkbox>
+							<text>{{value}}</text>
+						</label>
+					</checkbox-group>
+				</view>
+			</block>
+			<block wx:elif="{{item.type === '判断'}}">
+				<view class="radio-question">
+					<view class="question-title">
+						<text>{{item.id}}. {{item.title}}<text class="text-yellow">【判断】</text></text>
+					</view>
+					<radio-group class="radio-group" data-type="{{item.type}}" id="{{item.id}}" bindchange="radioChange">
+						<label class="my-choosebox" wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+							<radio wx:if="{{value}}" class="black radio" value="{{key}}">
+							</radio>
+							<text>{{value}}</text>
+						</label>
+					</radio-group>
+				</view>
+			</block>
+			<block wx:elif="{{item.type === '填空'}}">
+				<view class="blank-question">
+					<view class="question-title">
+						<text>{{item.id}}. {{item.title}}<text class="text-yellow">【填空】</text></text>
+					</view>
+					<view bindtap="handleTap" data-type="{{item.type}}" id="{{item.id}}" wx:for="{{item.correct_answer}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+						<input data-index="{{key}}" bindinput="inputChange" placeholder="[填空{{key + 1}}]"></input>
+					</view>
+				</view>
+			</block>
+			<block wx:elif="{{item.type === '排序'}}">
+				<view class="sort-question">
+					<view class="question-title">
+						<text>{{item.id}}. {{item.title}}<text class="text-yellow">【排序】</text></text>
+					</view>
+					<view wx:for="{{item.options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
+						<block wx:if="{{value != ''}}">
+							<view style="height: 50rpx;">
+								<text>{{key}}. {{value}}</text>
+							</view>
+						</block>
+					</view>
+					<view style="margin-top: 30rpx">
+						<input data-type="{{item.type}}" data-index="{{0}}" id="{{item.id}}" bindinput="inputChange" placeholder="[填空1]"></input>
+					</view>
+				</view>
+			</block>
+			<block wx:else>
+			</block>
+		</view>
+		<view class="submit" bindtap="handleSubmit">
+			<text>提交试卷</text>
+		</view>
+		<view class="timer">
+			<text>{{time}}</text>
 		</view>
 	</view>
-</view>
+	<view class="bg-sbumit {{ifSubmit?'show':'hide'}}">
+		<view class="detail">
+			<block wx:if="{{emptyQuestions.length > 0}}">
+				<text>你还有题目未完成
+				（{{emptyStr}}）
+					是否确认提交
+				</text>
+			</block>
+			<block wx:else>
+				<text>提交之后无法更改答案是否确认提交</text>
+			</block>
+		</view>
+		<view class="unfinished">
+			<view class="continute my-btn" bindtap="handleContinue">
+				<text>继续答题</text>
+			</view>
+			<view class="complete my-btn" bindtap="handleComplete">
+				<text>确定</text>
+			</view>
+		</view>
+	</view>
+</scroll-view>
