--- a/miniprogram/pages/home/interviewAll/interviewAll.wxml
+++ b/miniprogram/pages/home/interviewAll/interviewAll.wxml
@@ -1,4 +1,3 @@
-	<!-- <scroll-view scroll-y scroll-top="{{topNum}}" enable-back-to-top="true"> -->
 	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
 		<view slot="content">查看试卷</view>
 		<view slot="backText"></view>
@@ -36,19 +35,6 @@
 				</view>
 			</view>
 		</view>
-	
-		<!-- <view class="bank-title">
-			<text>{{bank.title}} </text>
-		</view> -->
-		<!-- <view class="score-time">
-			<text class="time">题目数量：{{bank.count}}道</text>
-		</view> -->
-		<!-- <view class="type-btns">
-			<text bindtap="handleCollection" class="cuIcon-favorfill text-yellow lg cuIcon-{{ifCollect?'favorfill': 'favor'}}"></text>
-			<view class="menu" bindtap="handleMenu" data-target="Modal">
-				<text class="cuIcon-apps lg text-yellow"></text>
-			</view>
-		</view> -->
 		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
 			<view class="cu-dialog" catchtap>
 				<view class="cu-bar bg-white justify-end">
@@ -69,22 +55,20 @@
 			<view class="radio-question">
 				<view class="question-title">
 					<text style="font-size: 38rpx;" >{{bank.questions[questionIndex].id}}. {{bank.questions[questionIndex].title}}</text>
-					<view wx:if="{{questionsFileArry.length > 0}}"  class="audio-play">
-						<view wx:if="{{audioPlay === 'init'}}" bindtap="play" >
+					<view wx:if="{{questionsFileArry[questionIndex].tempFilePaths.length > 1}}" class="audio-play">
+						<view wx:if="{{audioPlay === 'init'}}" bindtap="{{!buttonClicked?'play':''}}">
 							<text class="cuIcon-notificationfill text-yellow">
 							</text>
 						</view>
-						<view wx:if="{{audioPlay === 'play'}}" bindtap="stop">
+						<view wx:if="{{audioPlay === 'play'}}" bindtap="{{!buttonClicked?'stop':''}}">
 							<text class="cuIcon-stop text-yellow">
 							</text>
 						</view>
-						<view wx:if="{{audioPlay === 'pause'}}" bindtap="play" >
-						
+						<view wx:if="{{audioPlay === 'pause'}}" bindtap="{{!buttonClicked?'play':''}}">
 							<text class="cuIcon-playfill text-yellow">
 							</text>
 						</view>
 					</view>
-
 				</view>
 				<view class="correct-analyse">
 					<view wx:if="{{bank.questions[questionIndex].analyse}}">解析：\n{{bank.questions[questionIndex].analyse}}</view>
@@ -123,36 +107,22 @@
 			</view>
 			<view class="view-all" bindtap="viewAllComments">
 				{{ifViewAllComments?'收起评论':'查看全部评论'}}</view>
-			<!-- <view class="publish">
-				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
-				<view bindtap="handlePublish" class="publish-comment">提交</view>
-			</view> -->
 		</view>
 	</view>
-	<!-- </scroll-view> -->
-
-		<view class="next-publish">
-			<view class="pre-question chekckout-question" bindtap="handlePre">
-					<text class="cuIcon-pullleft  text-{{questionIndex > 0?'yellow': 'gray'}}"></text>
-			</view>
-			<view class="publish">
-				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
-				<view bindtap="handlePublish" class="publish-comment">发送</view>
-			</view>
-			<view class="next-question chekckout-question" bindtap="handleNext">
-				<block wx:if="{{questionIndex < bank.questions.length - 1}}">
-					<text class="cuIcon-pullright text-yellow"></text>
-				</block>
-				<block wx:else>
-					<text class="cuIcon-roundcheck text-yellow"></text>
-				</block>
-			</view>
-	</view>
-	<!-- <view class="next-size">
-
-		<view class="next-question chekckout-question" bindtap="handleNext">
-			{{questionIndex < bank.questions.length - 1?'下一题':'完成'}}</view>
-		<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-		<view class="page-size">{{questionIndex + 1}}/{{bank.questions.length}}
+	<view class="next-publish">
+		<view class="pre-question chekckout-question" bindtap="handlePre">
+			<text class="cuIcon-pullleft  text-{{questionIndex > 0?'yellow': 'gray'}}"></text>
 		</view>
-	</view> -->
+		<view class="publish">
+			<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
+			<view bindtap="handlePublish" class="publish-comment">发送</view>
+		</view>
+		<view class="next-question chekckout-question" bindtap="{{!buttonClicked?'handleNext':''}}">
+			<block wx:if="{{questionIndex < bank.questions.length - 1}}">
+				<text class="cuIcon-pullright text-yellow"></text>
+			</block>
+			<block wx:else>
+				<text class="cuIcon-roundcheck text-yellow"></text>
+			</block>
+		</view>
+	</view>
