--- a/miniprogram/pages/home/score/score.wxml
+++ b/miniprogram/pages/home/score/score.wxml
@@ -1,75 +1,73 @@
+<scroll-view scroll-y>
+	<cu-custom bgColor="bg-yellow">
+		<view slot="content">答题结果</view>
+	</cu-custom>
 
-<cu-custom bgColor="bg-yellow"> 
-	<view slot="content">答题结果</view>
-</cu-custom>
+	<view class="score">{{finalCorrectRate}}</view>
 
-<view class="score">{{finalCorrectRate}}</view>
+	<view class="wrap">
+		<view class="data">
+			<view class="row">
+				<view class="column">
+					<text>题型</text>
+				</view>
+				<view class="column">
+					<text>正确率/%</text>
+				</view>
+			</view>
+			<view wx:if="{{bank.questionTypeNum.radio}}" class="row">
+				<view class="column">
+					<text>单选题({{bank.questionTypeNum.radio}}道)</text>
+				</view>
+				<view class="column">
+					<text>{{bank.accuracy.radio}}</text>
+				</view>
+			</view>
+			<view wx:if="{{bank.questionTypeNum.checkbox}}" class="row">
+				<view class="column">
+					<text>多选题({{bank.questionTypeNum.checkbox}}道)</text>
+				</view>
+				<view class="column">
+					<text>{{bank.accuracy.checkbox}}</text>
+				</view>
+			</view>
+			<view wx:if="{{bank.questionTypeNum.judge}}" class="row">
+				<view class="column">
+					<text>判断题({{bank.questionTypeNum.judge}}道)</text>
+				</view>
+				<view class="column">
+					<text>{{bank.accuracy.judge}}</text>
+				</view>
+			</view>
+			<view wx:if="{{bank.questionTypeNum.blank}}" class="row">
+				<view class="column">
+					<text>填空题({{bank.questionTypeNum.blank}}道)</text>
+				</view>
+				<view class="column">
+					<text>{{bank.accuracy.blank}}</text>
+				</view>
+			</view>
+			<view wx:if="{{bank.questionTypeNum.sort}}" class="row">
+				<view class="column">
+					<text>排序题({{bank.questionTypeNum.sort}}道)</text>
+				</view>
+				<view class="column">
+					<text>{{bank.accuracy.sort}}</text>
+				</view>
+			</view>
+			<view wx:if="{{bank.questionTypeNum.unsteady}}" class="row">
+				<view class="column">
+					<text>不定项选题({{bank.questionTypeNum.unsteady}}道)</text>
+				</view>
+				<view class="column">
+					<text>{{bank.accuracy.unsteady}}</text>
+				</view>
+			</view>
 
-<view class="wrap">
-	<view class="data">
-		<view class="row">
-			<view class="column">
-				<text>题型</text>
-			</view>
-			<view class="column">
-				<text>正确率/%</text>
-			</view>
 		</view>
-		<view wx:if="{{bank.questionTypeNum.radio}}" class="row">
-			<view class="column">
-				<text>单选题({{bank.questionTypeNum.radio}}道)</text>
-			</view>
-			<view class="column">
-				<text>{{bank.accuracy.radio}}</text>
-			</view>
-		</view>
-		<view wx:if="{{bank.questionTypeNum.checkbox}}" class="row">
-			<view class="column">
-				<text>多选题({{bank.questionTypeNum.checkbox}}道)</text>
-			</view>
-			<view class="column">
-				<text>{{bank.accuracy.checkbox}}</text>
-			</view>
-		</view>
-		<view wx:if="{{bank.questionTypeNum.judge}}" class="row">
-			<view class="column">
-				<text>判断题({{bank.questionTypeNum.judge}}道)</text>
-			</view>
-			<view class="column">
-				<text>{{bank.accuracy.judge}}</text>
-			</view>
-		</view>
-		<view wx:if="{{bank.questionTypeNum.blank}}" class="row">
-			<view class="column">
-				<text>填空题({{bank.questionTypeNum.blank}}道)</text>
-			</view>
-			<view class="column">
-				<text>{{bank.accuracy.blank}}</text>
-			</view>
-		</view>
-		<view wx:if="{{bank.questionTypeNum.sort}}" class="row">
-			<view class="column">
-				<text>排序题({{bank.questionTypeNum.sort}}道)</text>
-			</view>
-			<view class="column">
-				<text>{{bank.accuracy.sort}}</text>
-			</view>
-		</view>
-		<view wx:if="{{bank.questionTypeNum.unsteady}}" class="row">
-			<view class="column">
-        <text>不定项选题({{bank.questionTypeNum.unsteady}}道)</text>
-			</view>
-			<view class="column">
-				<text>{{bank.accuracy.unsteady}}</text>
-			</view>
-		</view>
-
 	</view>
-</view>
-<view class="btn-wrap">
-<navigator url="../index/index" open-type="switchTab"><button  class="button1">返回首页</button></navigator>
-<navigator url="../wrongAll/wrongAll?class=笔试&id={{id}}"><button class="button2">查看试卷</button></navigator>
-</view>
-
-
-
+	<view class="btn-wrap">
+		<navigator url="../index/index" open-type="switchTab"><button class="button1">返回首页</button></navigator>
+		<navigator url="../wrongAll/wrongAll?class=笔试&id={{id}}"><button class="button2">查看试卷</button></navigator>
+	</view>
+</scroll-view>
