--- a/miniprogram/pages/home/wrongAll/wrongAll.wxml
+++ b/miniprogram/pages/home/wrongAll/wrongAll.wxml
@@ -1,4 +1,3 @@
-		<!-- <scroll-view scroll-y scroll-top="{{topNum}}" enable-back-to-top="true"> -->
 	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
 		<view slot="content">查看试卷</view>
 		<view slot="backText"></view>
@@ -13,10 +12,10 @@
 				return false;
 			}
 		}
-				var isLike = function(id, arr) {
+		var isLike = function(id, arr) {
 			var like = false
 			if (arr.length > 0) {
-				for(var i = 0; i < arr.length; i++) {
+				for (var i = 0; i < arr.length; i++) {
 					if (id == arr[i].userId) {
 						like = true
 					}
@@ -35,7 +34,7 @@
 		<view class="bank-head">
 			<view class="bank-title">
 				<text>{{bank.title}} </text>
-					<!-- <view class="score-time">
+				<!-- <view class="score-time">
 					<text class="time">时间：{{bank.limit_time}}分钟</text>
 		</view> -->
 			</view>
@@ -57,8 +56,8 @@
 					</view>
 				</view>
 				<view wx:if="{{wrongList.length > 0}}" class="type-btn bg-yellow" bindtap="checkType">
-						{{ifViewWrong?'完整试卷':'只看错题'}}
-					</view>
+					{{ifViewWrong?'完整试卷':'只看错题'}}
+				</view>
 				<view class="question-index-wrap">
 					<block wx:if="{{ifViewWrong}}">
 						<block wx:for="{{bank.bank}}" wx:key="index">
@@ -105,7 +104,7 @@
 						<label class="my-choosebox" wx:for="{{bank.bank[questionIndex].options}}" wx:key="key" wx:for-index="key" wx:for-item="value">
 							<!-- <checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} no-checkbox" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex],bank.bank[questionIndex].correct_answer)}}">
 							</checkbox> -->
-								<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} no-checkbox" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}">
+							<checkbox disabled wx:if="{{value}}" class="{{bank.bank[questionIndex].mistaked?'red':'yellow'}} no-checkbox" value="{{key}}" checked="{{filter.isChecked(key,chooseValue[questionIndex])}}">
 							</checkbox>
 							<text>{{value}}</text>
 						</label>
@@ -203,18 +202,18 @@
 							<view class="user-name">{{item.user_name}} </view>
 						</view>
 						<view class="like-dot" id="{{item.user_id}}" data-commentid="{{item.commentId}}" data-index="{{index}}" bindtap="handleLike">
-								<text class="like cuIcon-appreciatefill {{filter.isLike(userId,item.spot_count)? 'text-yellow' : 'text-grey'}}"></text>
+							<text class="like cuIcon-appreciatefill {{filter.isLike(userId,item.spot_count)? 'text-yellow' : 'text-grey'}}"></text>
 							<view class="dot-num">{{item.spot_count.length}}</view>
 						</view>
 					</view>
 					<view class="content">{{item.content}}
-						<view class="replay" data-index="{{index}}" data-commentid="{{item.commentId}}" bindtap="handleReplay" >
+						<view class="replay" data-index="{{index}}" data-commentid="{{item.commentId}}" bindtap="handleReplay">
 							<block wx:for="{{item.reply}}" wx:key="index">
-							<view class="replay-info" data-name="{{item.user_name}}" id="{{item.user_id}}">
-								<image src="{{item.avatar}}"></image>
-								<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-name">{{item.user_name}}: </text>
-								<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-content">{{item.content}} </text>
-							</view>
+								<view class="replay-info" data-name="{{item.user_name}}" id="{{item.user_id}}">
+									<image src="{{item.avatar}}"></image>
+									<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-name">{{item.user_name}}: </text>
+									<text data-name="{{item.user_name}}" id="{{item.user_id}}" class="replay-content">{{item.content}} </text>
+								</view>
 							</block>
 						</view>
 					</view>
@@ -230,19 +229,16 @@
 			</view> -->
 		</view>
 	</view>
-	<!-- </scroll-view> -->
-
 	<view class="next-publish">
 		<block wx:if="{{ifViewWrong}}">
 			<view class="pre-question chekckout-question" bindtap="handlePre">
-				<!-- <text hidden="{{!(wrongIndex > 0)}}" class="cuIcon-pullleft text-yellow"></text> -->
-					<text class="cuIcon-pullleft  text-{{wrongIndex > 0?'yellow': 'gray'}}"></text>
+				<text class="cuIcon-pullleft  text-{{wrongIndex > 0?'yellow': 'gray'}}"></text>
 			</view>
 			<view class="publish">
 				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
 				<view bindtap="handlePublish" class="publish-comment">提交</view>
 			</view>
-			<view class="next-question chekckout-question" bindtap="handleNext">
+			<view class="next-question chekckout-question" bindtap="{{!buttonClicked?'handleNext':''}}">
 				<block wx:if="{{wrongIndex < wrongList.length - 1}}">
 					<text class="cuIcon-pullright text-yellow"></text>
 				</block>
@@ -253,14 +249,13 @@
 		</block>
 		<block wx:else>
 			<view class="pre-question chekckout-question" bindtap="handlePre">
-				<!-- <text hidden="{{!(questionIndex > 0)}}" class="cuIcon-pullleft text-yellow"></text> -->
-					<text class="cuIcon-pullleft  text-{{questionIndex > 0?'yellow': 'gray'}}"></text>
+				<text class="cuIcon-pullleft  text-{{questionIndex > 0?'yellow': 'gray'}}"></text>
 			</view>
 			<view class="publish">
 				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
 				<view bindtap="handlePublish" class="publish-comment">发送</view>
 			</view>
-			<view class="next-question chekckout-question" bindtap="handleNext">
+			<view class="next-question chekckout-question" bindtap="{{!buttonClicked?'handleNext':''}}">
 				<block wx:if="{{questionIndex < bank.bank.length - 1}}">
 					<text class="cuIcon-pullright text-yellow"></text>
 				</block>
