--- a/miniprogram/pages/questionBank/enterWritten/enterWritten.wxml
+++ b/miniprogram/pages/questionBank/enterWritten/enterWritten.wxml
@@ -1,24 +1,25 @@
-<cu-custom bgColor="bg-yellow" isBack="{{true}}" >
-	<view slot="content"></view>
-	<view slot="backText">{{examType==='written'?'笔试':'面试'}}</view>
-</cu-custom>
-<view class="line1"></view>
-<view class="enterWritten">{{examType==='written'?'笔试':'面试'}}题目</view>
-<view class="line2"></view>
-<view class="frist1">{{bank.title}}</view>
-<view class="sentence">“每日一套，早日offer”</view>
-
-<button hidden="{{examType==='inerview'}}" plain="#000000" class="startAnswer" data-target="Modal"  bindtap="handleStart">开始答题 </button>
-<button hidden="{{examType==='written'}}" plain="#000000" class="startAnswer"  bindtap="handleStartInterview">开始答题 </button>
-		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
-			<view class="cu-dialog" catchtap>
-				<view class="cu-bar bg-white justify-end" style="padding: 54rpx 0;">
-					<view class="modal-title">
-						请选择刷题模式
-					</view>
+<scroll-view scroll-y>
+	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
+		<view slot="content"></view>
+		<view slot="backText">{{examType==='written'?'笔试':'面试'}}</view>
+	</cu-custom>
+	<view class="line1"></view>
+	<view class="enterWritten">{{examType==='written'?'笔试':'面试'}}题目</view>
+	<view class="line2"></view>
+	<view class="frist1">{{bank.title}}</view>
+	<view class="sentence">“每日一套，早日offer”</view>
+	<button hidden="{{examType==='inerview'}}" plain="#000000" class="startAnswer" data-target="Modal" bindtap="handleStart">开始答题 </button>
+	<button hidden="{{examType==='written'}}" plain="#000000" class="startAnswer" bindtap="handleStartInterview">开始答题
+	</button>
+	<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
+		<view class="cu-dialog" catchtap>
+			<view class="cu-bar bg-white justify-end" style="padding: 54rpx 0;">
+				<view class="modal-title">
+					请选择刷题模式
 				</view>
-				<view class="modal-content">
-				<view class="fighter" bindtap="handleFighter">
+			</view>
+			<view class="modal-content">
+				<view class="fighter" bindtap="{{!buttonClicked?'handleFighter':''}}">
 					<view class="img-wrap">
 						<image src="../../../images/icon/fighter.png"></image>
 					</view>
@@ -27,7 +28,7 @@
 						<text>完成整套试卷再查看答案</text>
 					</view>
 				</view>
-				<view class="sage" bindtap="handleSage">
+				<view class="sage" bindtap="{{!buttonClicked?'handleSage':''}}">
 					<view class="img-wrap">
 						<image src="../../../images/icon/sage.png"></image>
 					</view>
@@ -36,6 +37,7 @@
 						<text>每做一道题即可查看答案</text>
 					</view>
 				</view>
-				</view>
 			</view>
 		</view>
+	</view>
+</scroll-view>
