--- a/miniprogram/pages/questionBank/enterWritten/enterWritten.wxss
+++ b/miniprogram/pages/questionBank/enterWritten/enterWritten.wxss
@@ -117,3 +117,17 @@
   text-align: left;
   font-family: SourceHanSansSC-regular;
 }
+button::after {
+  border: none;
+  }
+  
+  button {
+  background-color: transparent;
+  padding-left: 0;
+  padding-right: 0;
+  line-height:inherit;
+  }
+  button {
+  border-radius:0;
+  }
+  
