--- a/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxml
+++ b/miniprogram/pages/questionBank/viewInterviewQuestion/viewInterviewQuestion.wxml
@@ -1,4 +1,3 @@
-	<!-- <scroll-view scroll-y scroll-top="{{topNum}}"  enable-back-to-top="true"> -->
 	<cu-custom bgColor="bg-yellow" isBack="{{true}}">
 		<view slot="content">查看试卷</view>
 		<view slot="backText"></view>
@@ -7,7 +6,7 @@
 		var isLike = function(id, arr) {
 			var like = false
 			if (arr.length > 0) {
-				for(var i = 0; i < arr.length; i++) {
+				for (var i = 0; i < arr.length; i++) {
 					if (id == arr[i].userId) {
 						like = true
 					}
@@ -22,7 +21,7 @@
 		}
 	</wxs>
 	<view id="page" class="bank-wrap">
-	<view class="bank-head">
+		<view class="bank-head">
 			<view class="bank-title">
 				<text>{{bank.title}} </text>
 				<view class="score-time">
@@ -36,15 +35,6 @@
 				</view>
 			</view>
 		</view>
-
-		<!-- <view class="type-btns">
-			<text bindtap="handleCollection" class="cuIcon-favorfill text-yellow lg cuIcon-{{ifCollect?'favorfill': 'favor'}}"></text>
-				<view class="menu" bindtap="handleMenu" data-target="Modal">
-				<text class="cuIcon-apps lg text-yellow"></text>
-			</view>
-		</view> -->
-	
-				
 		<view class="cu-modal {{modalName=='Modal'?'show':''}}" bindtap="hideModal">
 			<view class="cu-dialog" catchtap>
 				<view class="cu-bar bg-white justify-end">
@@ -59,21 +49,20 @@
 				</view>
 			</view>
 		</view>
-	
 		<view class="bank">
 			<view class="radio-question">
 				<view class="question-title">
 					<text style="font-size: 38rpx;" >{{bank.questions[questionIndex].id}}. {{bank.questions[questionIndex].title}}</text>
-						<view wx:if="{{questionsFileArry.length > 0}}"  class="audio-play">
-						<view wx:if="{{audioPlay === 'init'}}" bindtap="play" >
+					<view wx:if="{{questionsFileArry[questionIndex].tempFilePaths.length > 1}}" class="audio-play">
+						<view wx:if="{{audioPlay === 'init'}}" bindtap="{{!buttonClicked?'play':''}}">
 							<text class="cuIcon-notificationfill text-yellow">
 							</text>
 						</view>
-						<view wx:if="{{audioPlay === 'play'}}" bindtap="stop">
+						<view wx:if="{{audioPlay === 'play'}}" bindtap="{{!buttonClicked?'stop':''}}">
 							<text class="cuIcon-stop text-yellow">
 							</text>
 						</view>
-						<view wx:if="{{audioPlay === 'pause'}}" bindtap="play" >
+						<view wx:if="{{audioPlay === 'pause'}}" bindtap="{{!buttonClicked?'play':''}}">
 							<text class="cuIcon-playfill text-yellow">
 							</text>
 						</view>
@@ -122,32 +111,20 @@
 			</view> -->
 		</view>
 	</view>
-<!-- </scroll-view> -->
-
 	<view class="next-publish">
-			<view class="pre-question chekckout-question" bindtap="handlePre">
-					<text class="cuIcon-pullleft  text-{{questionIndex > 0?'yellow': 'gray'}}"></text>
-			</view>
-			<view class="publish">
-				<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
-				<view bindtap="handlePublish" class="publish-comment">发送</view>
-			</view>
-			<view class="next-question chekckout-question" bindtap="handleNext">
-				<block wx:if="{{questionIndex < bank.questions.length - 1}}">
-					<text class="cuIcon-pullright text-yellow"></text>
-				</block>
-				<block wx:else>
-					<text class="cuIcon-roundcheck text-yellow"></text>
-				</block>
-			</view>
-	</view>
-
-	<!-- <view class="next-size">
-		<view class="next-question chekckout-question" bindtap="handleNext">
-			{{questionIndex < bank.questions.length - 1?'下一题':'完成'}}</view>
-		<view wx:if="{{questionIndex > 0}}" class="pre-question chekckout-question" bindtap="handlePre">上一题</view>
-		<view class="page-size">{{questionIndex + 1}}/{{bank.questions.length}}
+		<view class="pre-question chekckout-question" bindtap="handlePre">
+			<text class="cuIcon-pullleft  text-{{questionIndex > 0?'yellow': 'gray'}}"></text>
 		</view>
-	</view> -->
-
-<!-- </scroll-view> -->
+		<view class="publish">
+			<input placeholder="{{placeHolderValue}}" value="{{commentContent}}" bindblur="handleBlur" bindinput="handleComment" bindtap="handleInput" focus="{{autoFocus}}"></input>
+			<view bindtap="handlePublish" class="publish-comment">发送</view>
+		</view>
+		<view class="next-question chekckout-question" bindtap="{{!buttonClicked?'handleNext':''}}">
+			<block wx:if="{{questionIndex < bank.questions.length - 1}}">
+				<text class="cuIcon-pullright text-yellow"></text>
+			</block>
+			<block wx:else>
+				<text class="cuIcon-roundcheck text-yellow"></text>
+			</block>
+		</view>
+	</view>
